tools/97_addons/experimental/turbonomic/turbo-gateway/create-turbo-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: turbo-gateway
  namespace: default
  labels:
      app: turbo-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: turbo-gateway
  template:
    metadata:
      labels:
        app: turbo-gateway
    spec:
      containers:
      - image: quay.io/niklaushirt/turbo-gateway:1.0.9
        imagePullPolicy: IfNotPresent
        name: gateway
        command:
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: "50m"
            memory: "50Mi"
          limits:
            cpu: "250m"
            memory: "250Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: turbo-gateway-service
  namespace:  ibm-aiops-installer
spec:
  selector:
    app: turbo-gateway
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
---
# Source: robot-shop/templates/web-service.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: turbo-gateway
  namespace:  ibm-aiops-installer
spec:
  to:
    kind: Service
    name: turbo-gateway-service
